embed them youtubes.

--- a/exploratory_analysis.html
+++ b/exploratory_analysis.html
@@ -488,7 +488,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/evwEoXO3Y7w"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
