--- a/visualization_pt1.html
+++ b/visualization_pt1.html
@@ -489,7 +489,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/32RI5q1IXAI"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
