--- a/visualization_pt2.html
+++ b/visualization_pt2.html
@@ -489,7 +489,7 @@ div.tocify {
 <h3>Video Lecture</h3>
 <div class="vid_container">
 <p><iframe 
-    src="https://www.youtube.com/embed/oHg5SJYRHA0"
+    src="https://www.youtube.com/embed/JglEg1vQLrI"
     frameborder="0" allowfullscreen class="video"> </iframe></p>
 </div>
 <hr />
@@ -516,27 +516,26 @@ library(patchwork)</code></pre>
     date_min = &quot;2017-01-01&quot;,
     date_max = &quot;2017-12-31&quot;) %&gt;%
   mutate(
-    name = recode(id, USW00094728 = &quot;CentralPark_NY&quot;, 
-                      USC00519397 = &quot;Waikiki_HA&quot;,
-                      USS0023B17S = &quot;Waterhole_WA&quot;),
+    name = recode(
+      id, 
+      USW00094728 = &quot;CentralPark_NY&quot;, 
+      USC00519397 = &quot;Waikiki_HA&quot;,
+      USS0023B17S = &quot;Waterhole_WA&quot;),
     tmin = tmin / 10,
     tmax = tmax / 10) %&gt;%
   select(name, id, everything())
-## Registered S3 method overwritten by &#39;crul&#39;:
-##   method                 from
-##   as.character.form_file httr
 ## Registered S3 method overwritten by &#39;hoardr&#39;:
 ##   method           from
 ##   print.cache_info httr
-## file path:          /Users/jeffgoldsmith/Library/Caches/rnoaa/ghcnd/USW00094728.dly
-## file last updated:  2018-06-14 13:08:48
-## file min/max dates: 1869-01-01 / 2018-06-30
-## file path:          /Users/jeffgoldsmith/Library/Caches/rnoaa/ghcnd/USC00519397.dly
-## file last updated:  2018-06-14 13:09:00
-## file min/max dates: 1965-01-01 / 2018-06-30
-## file path:          /Users/jeffgoldsmith/Library/Caches/rnoaa/ghcnd/USS0023B17S.dly
-## file last updated:  2018-06-14 13:09:04
-## file min/max dates: 1999-09-01 / 2018-06-30
+## using cached file: /Users/jeffgoldsmith/Library/Caches/R/noaa_ghcnd/USW00094728.dly
+## date created (size, mb): 2020-09-25 14:56:47 (7.519)
+## file min/max dates: 1869-01-01 / 2020-09-30
+## using cached file: /Users/jeffgoldsmith/Library/Caches/R/noaa_ghcnd/USC00519397.dly
+## date created (size, mb): 2020-09-25 14:56:52 (1.699)
+## file min/max dates: 1965-01-01 / 2020-03-31
+## using cached file: /Users/jeffgoldsmith/Library/Caches/R/noaa_ghcnd/USS0023B17S.dly
+## date created (size, mb): 2020-09-25 14:56:54 (0.877)
+## file min/max dates: 1999-09-01 / 2020-09-30
 
 weather_df
 ## # A tibble: 1,095 x 6
