--- a/topic_visualization_and_eda.html
+++ b/topic_visualization_and_eda.html
@@ -392,7 +392,7 @@ $(document).ready(function () {
 <li><a href="visualization_pt2.html">Visualization with <code>ggplot2</code> Pt. 2</a></li>
 <li><a href="exploratory_analysis.html">Exploratory analysis using <code>group_by</code></a></li>
 </ul>
-<p>The code that I produced working examples in lecture is <a href="">here</a>.</p>
+<p>The code that I produced working examples in lecture is <a href="https://github.com/P8105/viz_and_eda">here</a>.</p>
 
 <br><br>
 <footer>
