--- a/homework_and_projects.html
+++ b/homework_and_projects.html
@@ -405,7 +405,7 @@ $(document).ready(function () {
 <td align="left">Sept 8, 10am</td>
 <td align="left">Sept 11, 10pm</td>
 <td align="center"><a href="homework_0.html"><i class="far fa-file-code fa-lg"></i></a></td>
-<td align="center"><a href="link"><i class="fas fa-check fa-lg"></i></a></td>
+<td align="center"><a href=""><i class="fas fa-check fa-lg"></i></a></td>
 </tr>
 <tr class="even">
 <td align="left">Homework 1</td>
@@ -433,7 +433,7 @@ $(document).ready(function () {
 <td align="left">Oct 26, 10am</td>
 <td align="left">Nov 4, 10pm</td>
 <td align="center"><a href="homework_4.html"><i class="far fa-file-code fa-lg"></i></a></td>
-<td align="center"><a href="link"><i class="fas fa-check fa-lg"></i></a></td>
+<td align="center"><a href=""><i class="fas fa-check fa-lg"></i></a></td>
 </tr>
 <tr class="even">
 <td align="left">Homework 5</td>
@@ -454,7 +454,7 @@ $(document).ready(function () {
 <td align="left">Dec 4, 10am</td>
 <td align="left">Dec 11, 10pm</td>
 <td align="center"><a href="homework_7.html"><i class="far fa-file-code fa-lg"></i></a></td>
-<td align="center"><a href="link"><i class="fas fa-check fa-lg"></i></a></td>
+<td align="center"><a href=""><i class="fas fa-check fa-lg"></i></a></td>
 </tr>
 </tbody>
 </table>
