--- a/reading_data_from_the_web.html
+++ b/reading_data_from_the_web.html
@@ -467,7 +467,7 @@ div.tocify {
 <h2>Overview</h2>
 <div id="learning-objectives" class="section level3">
 <h3>Learning Objectives</h3>
-<p>Gather data from online sources (i.e. “scrape”) using APIs, rvest, and httr.</p>
+<p>Gather data from online sources (i.e. “scrape”) using APIs, rvest, and httr.</p>
 </div>
 <div id="slide-deck" class="section level3">
 <h3>Slide Deck</h3>
@@ -506,17 +506,17 @@ library(httr)</code></pre>
 <p><a href="http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm">This page</a> contains data from the National Survey on Drug Use and Health; it includes tables for drug use in the past year or month, separately for specific kinds of drug use. These data are potentially useful for analysis, and we’d like to be able to read in the first table.</p>
 <p>First, let’s make sure we can load the data from the web.</p>
 <pre class="r"><code>url = &quot;http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm&quot;
-drug_use_xml = read_html(url)
+drug_use_html = read_html(url)
 
-drug_use_xml
-## {html_document}
+drug_use_html</code></pre>
+<pre><code>## {html_document}
 ## &lt;html lang=&quot;en&quot;&gt;
 ## [1] &lt;head&gt;\n&lt;link rel=&quot;P3Pv1&quot; href=&quot;http://www.samhsa.gov/w3c/p3p.xml&quot;&gt;\n&lt;tit ...
 ## [2] &lt;body&gt;\r\n\r\n&lt;noscript&gt;\r\n&lt;p&gt;Your browser&#39;s Javascript is off. Hyperlin ...</code></pre>
 <p>Doesn’t look like much, but we’re there. Rather than trying to grab something using a CSS selector, let’s try our luck extracting the tables from the HTML.</p>
-<pre class="r"><code>drug_use_xml %&gt;%
-  html_nodes(css = &quot;table&quot;)
-## {xml_nodeset (15)}
+<pre class="r"><code>drug_use_html %&gt;%
+  html_nodes(css = &quot;table&quot;)</code></pre>
+<pre><code>## {xml_nodeset (15)}
 ##  [1] &lt;table class=&quot;rti&quot; border=&quot;1&quot; cellspacing=&quot;0&quot; cellpadding=&quot;1&quot; width=&quot;100 ...
 ##  [2] &lt;table class=&quot;rti&quot; border=&quot;1&quot; cellspacing=&quot;0&quot; cellpadding=&quot;1&quot; width=&quot;100 ...
 ##  [3] &lt;table class=&quot;rti&quot; border=&quot;1&quot; cellspacing=&quot;0&quot; cellpadding=&quot;1&quot; width=&quot;100 ...
@@ -535,19 +535,21 @@ drug_use_xml
 <p>This has extracted <em>all</em> of the tables on the original page; that’s why we have a list with 15 elements. (We haven’t really talked about lists yet, but for now you can think of them as a general collection of objects in R. As we proceed, syntax for extracting individual elements from a list will become clear, and we’ll talk lots about lists in <a href="listcols_and_bootstrapping.html">list columns</a>.)</p>
 <p>We’re only focused on the first table for now, so let’s get the contents from the first list element.</p>
 <pre class="r"><code>table_marj = 
-  (drug_use_xml %&gt;% html_nodes(css = &quot;table&quot;)) %&gt;% 
-  .[[1]] %&gt;%
+  drug_use_html %&gt;% 
+  html_nodes(css = &quot;table&quot;) %&gt;% 
+  first() %&gt;%
   html_table() </code></pre>
 <p>I won’t print the table here, but if you look at it you’ll notice a problem: the “note” at the bottom of the table appears in every column in the first row. We need to remove that; I’ll also convert to a tibble so that things print nicely.</p>
 <pre class="r"><code>table_marj = 
-  (drug_use_xml %&gt;% html_nodes(css = &quot;table&quot;)) %&gt;% 
-  .[[1]] %&gt;%
+  drug_use_html %&gt;% 
+  html_nodes(css = &quot;table&quot;) %&gt;% 
+  first() %&gt;% 
   html_table() %&gt;%
   slice(-1) %&gt;% 
   as_tibble()
 
-table_marj
-## # A tibble: 56 x 16
+table_marj</code></pre>
+<pre><code>## # A tibble: 56 x 16
 ##    State `12+(2013-2014)` `12+(2014-2015)` `12+(P Value)` `12-17(2013-201…
 ##    &lt;chr&gt; &lt;chr&gt;            &lt;chr&gt;            &lt;chr&gt;          &lt;chr&gt;           
 ##  1 Tota… 12.90a           13.36            0.002          13.28b          
@@ -643,8 +645,9 @@ reviews = tibble(
 <p>As a simple example, <a href="https://data.cityofnewyork.us/Environment/Water-Consumption-In-The-New-York-City/ia2d-e54m">this page</a> is about a dataset for annual water consumption in NYC, along with the population in that year. First, we’ll import this as a CSV and parse it.</p>
 <pre class="r"><code>nyc_water = 
   GET(&quot;https://data.cityofnewyork.us/resource/ia2d-e54m.csv&quot;) %&gt;% 
-  content(&quot;parsed&quot;)
-## Parsed with column specification:
+  content(&quot;parsed&quot;)</code></pre>
+<pre><code>## 
+## ── Column specification ─────────────────────────────────────────────────────────────────────────────────────────────────
 ## cols(
 ##   year = col_double(),
 ##   new_york_city_population = col_double(),
@@ -669,14 +672,12 @@ reviews = tibble(
   GET(&quot;http://pokeapi.co/api/v2/pokemon/1&quot;) %&gt;%
   content()
 
-poke$name
-## [1] &quot;bulbasaur&quot;
-
-poke$height
-## [1] 7
-
-poke$abilities
-## [[1]]
+poke$name</code></pre>
+<pre><code>## [1] &quot;bulbasaur&quot;</code></pre>
+<pre class="r"><code>poke$height</code></pre>
+<pre><code>## [1] 7</code></pre>
+<pre class="r"><code>poke$abilities</code></pre>
+<pre><code>## [[1]]
 ## [[1]]$ability
 ## [[1]]$ability$name
 ## [1] &quot;overgrow&quot;
