--- a/strings_and_factors.html
+++ b/strings_and_factors.html
@@ -642,18 +642,18 @@ table_marj =
 rest_inspec %&gt;% 
   group_by(boro, grade) %&gt;% 
   summarize(n = n()) %&gt;% 
-  spread(key = grade, value = n)</code></pre>
+  pivot_wider(names_from = grade, values_from = n)</code></pre>
 <pre><code>## `summarise()` regrouping output by &#39;boro&#39; (override with `.groups` argument)</code></pre>
 <pre><code>## # A tibble: 6 x 8
 ## # Groups:   boro [6]
-##   boro              A     B     C `Not Yet Graded`     P     Z `&lt;NA&gt;`
-##   &lt;chr&gt;         &lt;int&gt; &lt;int&gt; &lt;int&gt;            &lt;int&gt; &lt;int&gt; &lt;int&gt;  &lt;int&gt;
-## 1 BRONX         13688  2801   701              200   163   351  16833
-## 2 BROOKLYN      37449  6651  1684              702   416   977  51930
-## 3 MANHATTAN     61608 10532  2689              765   508  1237  80615
-## 4 Missing           4    NA    NA               NA    NA    NA     13
-## 5 QUEENS        35952  6492  1593              604   331   913  45816
-## 6 STATEN ISLAND  5215   933   207               85    47   149   6730</code></pre>
+##   boro              A     B     C `Not Yet Graded`     P     Z  `NA`
+##   &lt;chr&gt;         &lt;int&gt; &lt;int&gt; &lt;int&gt;            &lt;int&gt; &lt;int&gt; &lt;int&gt; &lt;int&gt;
+## 1 BRONX         13688  2801   701              200   163   351 16833
+## 2 BROOKLYN      37449  6651  1684              702   416   977 51930
+## 3 MANHATTAN     61608 10532  2689              765   508  1237 80615
+## 4 Missing           4    NA    NA               NA    NA    NA    13
+## 5 QUEENS        35952  6492  1593              604   331   913 45816
+## 6 STATEN ISLAND  5215   933   207               85    47   149  6730</code></pre>
 <p>To simplify things, I’ll remove inspections with scores other than <code>A</code>, <code>B</code>, or <code>C</code>, and also remove the restaurants with missing boro information. I’ll also clean up boro names a bit.</p>
 <pre class="r"><code>rest_inspec =
   rest_inspec %&gt;%
@@ -664,7 +664,7 @@ rest_inspec %&gt;%
   filter(str_detect(dba, &quot;Pizza&quot;)) %&gt;% 
   group_by(boro, grade) %&gt;% 
   summarize(n = n()) %&gt;% 
-  spread(key = grade, value = n)</code></pre>
+  pivot_wider(names_from = grade, values_from = n)</code></pre>
 <pre><code>## `summarise()` regrouping output by &#39;boro&#39; (override with `.groups` argument)</code></pre>
 <pre><code>## # A tibble: 5 x 3
 ## # Groups:   boro [5]
@@ -680,7 +680,7 @@ rest_inspec %&gt;%
   filter(str_detect(dba, &quot;[Pp][Ii][Zz][Zz][Aa]&quot;)) %&gt;% 
   group_by(boro, grade) %&gt;% 
   summarize(n = n()) %&gt;% 
-  spread(key = grade, value = n)</code></pre>
+  pivot_wider(names_from = grade, values_from = n)</code></pre>
 <pre><code>## `summarise()` regrouping output by &#39;boro&#39; (override with `.groups` argument)</code></pre>
 <pre><code>## # A tibble: 5 x 4
 ## # Groups:   boro [5]
