--- a/dataset_restaurant_inspections.html
+++ b/dataset_restaurant_inspections.html
@@ -476,7 +476,7 @@ div.tocify {
 </div>
 <div id="data-description" class="section level2">
 <h2>Data description</h2>
-<p>Data on restaurant inspection results are publicly available at <a href="https://dev.socrata.com/foundry/data.cityofnewyork.us/43nn-pn8j">NYC Open Data</a> and are updated daily. The specific data to be used in this class, linked to at the top of this page, was accessed in October 2017 using the code below.</p>
+<p>Data on restaurant inspection results are publicly available at <a href="https://data.cityofnewyork.us/Health/DOHMH-New-York-City-Restaurant-Inspection-Results/43nn-pn8j">NYC Open Data</a> and are updated daily. The specific data to be used in this class, linked to at the top of this page, was accessed in October 2017 using the code below.</p>
 <pre class="r"><code>library(tidyverse)
 library(httr)
 library(jsonlite)
@@ -513,7 +513,8 @@ get_all_inspections = function(url) {
 
 url = &quot;https://data.cityofnewyork.us/resource/43nn-pn8j.json&quot;
 
-nyc_inspections = get_all_inspections(url) %&gt;%
+nyc_inspections = 
+  get_all_inspections(url) %&gt;%
   bind_rows() </code></pre>
 <p>The dataset contains roughly 400,000 rows and 26 columns. There is information on restaurant name and location, type of food, inspection date, and details on violation codes, total scores, and associated grades. The data is longitudinal in nature, with multiple rows per restaurant representing inspections over time. A complete data dictionary can be accessed <a href="./data/Restaurant_Inspection_Open_Data_Dictionary_082214.xlsx">here</a>.</p>
 </div>
@@ -574,7 +575,7 @@ $(document).ready(function ()  {
       theme: "bootstrap3",
       context: '.toc-content',
       hashGenerator: function (text) {
-        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_').toLowerCase();
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
       },
       ignoreSelector: ".toc-ignore",
       scrollTo: 0
