updated due dates

--- a/final_project.html
+++ b/final_project.html
@@ -486,27 +486,27 @@ div.tocify {
 </thead>
 <tbody>
 <tr class="odd">
-<td>November 7 by 1:00</td>
+<td>November 7 by 1:00 pm</td>
 <td>Form a team and submit a proposal</td>
 <td>Written proposal document</td>
 </tr>
 <tr class="even">
-<td>November 11-15</td>
+<td>November 10-13</td>
 <td>Project review meeting</td>
-<td>In person meeting – no “deliverable”</td>
+<td>Zoom meeting – no “deliverable”</td>
 </tr>
 <tr class="odd">
-<td>December 5 by 4:00</td>
+<td>December 5 by 4:00 pm</td>
 <td>Report</td>
 <td>Written report giving detailed project description</td>
 </tr>
 <tr class="even">
-<td>December 5 by 4:00</td>
+<td>December 5 by 4:00 pm</td>
 <td>Webpage and screencast</td>
 <td>Webpage overview of project, with short explanatory video (published online)</td>
 </tr>
 <tr class="odd">
-<td>December 5 by 8:00</td>
+<td>December 5 by 8:00 pm</td>
 <td>Peer assessment</td>
 <td>Brief assessment of your teammates contributions (as a short document)</td>
 </tr>
